fixed responsive design of home page image so that it shrinks to fit smaller screens, but isn't too large on larger screens

--- a/HomeSchoolDayBook/wwwroot/css/site.css
+++ b/HomeSchoolDayBook/wwwroot/css/site.css
@@ -21,6 +21,12 @@ hr {
     page-break-inside: avoid;
 }
 
+img {
+    width: 100%;
+    max-width: 900px;
+    height: auto;
+}
+
 /*@page {
     margin: 10cm;
 }*/
